# dbf_parquet

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-all-main.yml  ci.yml  cmake-multi-platform.yml  main.yml
src/: dbf.cpp  dbf.hpp  main.cpp
